# training

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  go.work  package.json  pyproject.toml  tsconfig.json  tsconfig.options.json
.moon/: toolchain.yml
apps/dioxus-web-app/: Cargo.toml  Dioxus.toml  Dockerfile  moon.yml
apps/dioxus-web-app/src/: main.rs
apps/fastify-react/: .swcrc  moon.yml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/fastify-react/src/: server.ts
apps/fastify-react/src/client/: index.html
apps/go-api-server/: Dockerfile  go.mod  main.go  moon.yml
apps/hono-binary/: Dockerfile  moon.yml  package.json
apps/next-fifteen/: Dockerfile  moon.yml  package.json  tsconfig.json
apps/nuxt-app/: .dockerignore  Dockerfile  package.json  tsconfig.json
apps/py-project/: main.py  moon.yml  pyproject.toml
apps/triplit-remote-server/: Dockerfile  README.md  moon.yml  package.json
apps/triplit-remote-server/src/: index.ts
apps/ts-start/: .cta.json  moon.yml  package.json  tsconfig.json
apps/ts-start/src/: routeTree.gen.ts
apps/ts-start/src/components/: Header.tsx
apps/ts-start/src/routes/: __root.tsx  demo.tanstack-query.tsx
apps/waku-project/: Dockerfile  moon.yml  package.json  tsconfig.json  waku.config.ts
apps/waku-project/src/pages/: _layout.tsx  index.tsx
