[package]
name = "dioxus-web-app"
version = "0.1.0"
authors = ["levu"]
edition = "2021"
include = ["/src", "/Cargo.toml", "/README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }

[features]
default = ["web"]
web = ["dioxus/web"]
